<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PowerMeterOptmizerWindow</class>
 <widget class="QMainWindow" name="PowerMeterOptmizerWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Power Scan</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1">
    <item>
     <widget class="QGroupBox" name="control_groupBox">
      <property name="title">
       <string>Power Scan Control</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="3" column="2" rowspan="10">
        <widget class="QGroupBox" name="collect_groupBox">
         <property name="title">
          <string>Collect</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_2">
          <item row="1" column="0">
           <widget class="QDoubleSpinBox" name="apd_int_time_doubleSpinBox"/>
          </item>
          <item row="0" column="1">
           <widget class="QCheckBox" name="collect_spectrum_checkBox">
            <property name="text">
             <string>Lightfield</string>
            </property>
           </widget>
          </item>
          <item row="3" column="0">
           <widget class="QCheckBox" name="collect_hydraharp_checkBox">
            <property name="text">
             <string>HydraHarp</string>
            </property>
           </widget>
          </item>
          <item row="1" column="1">
           <widget class="QDoubleSpinBox" name="spectrum_int_time_doubleSpinBox"/>
          </item>
          <item row="0" column="0">
           <widget class="QCheckBox" name="collect_apd_checkBox">
            <property name="text">
             <string>APD</string>
            </property>
           </widget>
          </item>
          <item row="4" column="0">
           <widget class="QDoubleSpinBox" name="hydraharp_tacq_doubleSpinBox"/>
          </item>
         </layout>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QPushButton" name="interrupt_pushButton">
         <property name="text">
          <string>Interrupt</string>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <widget class="QCheckBox" name="updown_sweep_checkBox">
         <property name="text">
          <string>Up Down Sweep</string>
         </property>
        </widget>
       </item>
       <item row="4" column="1">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Number of Datapoints</string>
         </property>
        </widget>
       </item>
       <item row="5" column="1">
        <widget class="QDoubleSpinBox" name="num_datapoints_doubleSpinBox">
         <property name="decimals">
          <number>0</number>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
        <widget class="QPushButton" name="start_pushButton">
         <property name="text">
          <string>Start</string>
         </property>
        </widget>
       </item>
       <item row="8" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Power Wheel Min</string>
         </property>
        </widget>
       </item>
       <item row="10" column="0">
        <widget class="QDoubleSpinBox" name="powerwheel_min_doubleSpinBox">
         <property name="decimals">
          <number>0</number>
         </property>
        </widget>
       </item>
       <item row="8" column="1">
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>Power Wheel Max</string>
         </property>
        </widget>
       </item>
       <item row="10" column="1">
        <widget class="QDoubleSpinBox" name="powerwheel_max_doubleSpinBox">
         <property name="decimals">
          <number>0</number>
         </property>
        </widget>
       </item>
       <item row="5" column="0">
        <widget class="QCheckBox" name="use_shutter_checkBox">
         <property name="text">
          <string>Use Shutter</string>
         </property>
        </widget>
       </item>
       <item row="1" column="2">
        <widget class="QComboBox" name="powermeter_comboBox"/>
       </item>
       <item row="2" column="2">
        <widget class="QComboBox" name="powerwheel_comboBox"/>
       </item>
      </layout>
     </widget>
    </item>
    <item>
     <widget class="QGroupBox" name="plot_groupBox">
      <property name="title">
       <string>Plot</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2"/>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
